--- a/src/index.module.css
+++ b/src/index.module.css
@@ -3,6 +3,7 @@ body {
 
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
     'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-size: var(--font-md);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -11,8 +12,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
-@media (--small-viewport) {
-  body {
-    background-color: red;
+.app {
+  padding: 0;
+
+  @media (--small-viewport) {
+    padding: 10px;
   }
 }
